; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_utils.c_gl_upload_tex.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_utils.c_gl_upload_tex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 (i32, i32)*, i32 (i32, i32, i32, i32, i32, i32, i32, i32, i32*)* }

@GL_UNPACK_ALIGNMENT = common dso_local global i32 0, align 4
@MPGL_CAP_ROW_LENGTH = common dso_local global i32 0, align 4
@GL_UNPACK_ROW_LENGTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_upload_tex(%struct.TYPE_3__* %0, i32 %1, i32 %2, i32 %3, i8* %4, i32 %5, i32 %6, i32 %7, i32 %8, i32 %9) #0 {
  %11 = alloca %struct.TYPE_3__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32*, align 8
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %11, align 8
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i8* %4, i8** %15, align 8
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i32 %9, i32* %20, align 4
  %25 = load i32, i32* %13, align 4
  %26 = load i32, i32* %14, align 4
  %27 = call i32 @gl_bytes_per_pixel(i32 %25, i32 %26)
  store i32 %27, i32* %21, align 4
  %28 = load i8*, i8** %15, align 8
  %29 = bitcast i8* %28 to i32*
  store i32* %29, i32** %22, align 8
  %30 = load i32, i32* %18, align 4
  %31 = load i32, i32* %20, align 4
  %32 = add nsw i32 %30, %31
  store i32 %32, i32* %23, align 4
  %33 = load i32, i32* %19, align 4
  %34 = icmp sle i32 %33, 0
  br i1 %34, label %41, label %35

35:                                               ; preds = %10
  %36 = load i32, i32* %20, align 4
  %37 = icmp sle i32 %36, 0
  br i1 %37, label %41, label %38

38:                                               ; preds = %35
  %39 = load i32, i32* %21, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %42, label %41

41:                                               ; preds = %38, %35, %10
  br label %146

42:                                               ; preds = %38
  %43 = load i32, i32* %16, align 4
  %44 = icmp sgt i32 %43, 0
  %45 = zext i1 %44 to i32
  %46 = call i32 @assert(i32 %45)
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 1
  %49 = load i32 (i32, i32)*, i32 (i32, i32)** %48, align 8
  %50 = load i32, i32* @GL_UNPACK_ALIGNMENT, align 4
  %51 = load i32, i32* %16, align 4
  %52 = call i32 @get_alignment(i32 %51)
  %53 = call i32 %49(i32 %50, i32 %52)
  %54 = load i32, i32* %20, align 4
  store i32 %54, i32* %24, align 4
  %55 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = load i32, i32* @MPGL_CAP_ROW_LENGTH, align 4
  %59 = and i32 %57, %58
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %70

61:                                               ; preds = %42
  %62 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %63 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %62, i32 0, i32 1
  %64 = load i32 (i32, i32)*, i32 (i32, i32)** %63, align 8
  %65 = load i32, i32* @GL_UNPACK_ROW_LENGTH, align 4
  %66 = load i32, i32* %16, align 4
  %67 = load i32, i32* %21, align 4
  %68 = sdiv i32 %66, %67
  %69 = call i32 %64(i32 %65, i32 %68)
  br label %78

70:                                               ; preds = %42
  %71 = load i32, i32* %16, align 4
  %72 = load i32, i32* %21, align 4
  %73 = load i32, i32* %19, align 4
  %74 = mul nsw i32 %72, %73
  %75 = icmp ne i32 %71, %74
  br i1 %75, label %76, label %77

76:                                               ; preds = %70
  store i32 1, i32* %24, align 4
  br label %77

77:                                               ; preds = %76, %70
  br label %78

78:                                               ; preds = %77, %61
  br label %79

79:                                               ; preds = %104, %78
  %80 = load i32, i32* %18, align 4
  %81 = load i32, i32* %24, align 4
  %82 = add nsw i32 %80, %81
  %83 = load i32, i32* %23, align 4
  %84 = icmp sle i32 %82, %83
  br i1 %84, label %85, label %108

85:                                               ; preds = %79
  %86 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %87 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %86, i32 0, i32 2
  %88 = load i32 (i32, i32, i32, i32, i32, i32, i32, i32, i32*)*, i32 (i32, i32, i32, i32, i32, i32, i32, i32, i32*)** %87, align 8
  %89 = load i32, i32* %12, align 4
  %90 = load i32, i32* %17, align 4
  %91 = load i32, i32* %18, align 4
  %92 = load i32, i32* %19, align 4
  %93 = load i32, i32* %24, align 4
  %94 = load i32, i32* %13, align 4
  %95 = load i32, i32* %14, align 4
  %96 = load i32*, i32** %22, align 8
  %97 = call i32 %88(i32 %89, i32 0, i32 %90, i32 %91, i32 %92, i32 %93, i32 %94, i32 %95, i32* %96)
  %98 = load i32, i32* %16, align 4
  %99 = load i32, i32* %24, align 4
  %100 = mul nsw i32 %98, %99
  %101 = load i32*, i32** %22, align 8
  %102 = sext i32 %100 to i64
  %103 = getelementptr inbounds i32, i32* %101, i64 %102
  store i32* %103, i32** %22, align 8
  br label %104

104:                                              ; preds = %85
  %105 = load i32, i32* %24, align 4
  %106 = load i32, i32* %18, align 4
  %107 = add nsw i32 %106, %105
  store i32 %107, i32* %18, align 4
  br label %79

108:                                              ; preds = %79
  %109 = load i32, i32* %18, align 4
  %110 = load i32, i32* %23, align 4
  %111 = icmp slt i32 %109, %110
  br i1 %111, label %112, label %127

112:                                              ; preds = %108
  %113 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %114 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %113, i32 0, i32 2
  %115 = load i32 (i32, i32, i32, i32, i32, i32, i32, i32, i32*)*, i32 (i32, i32, i32, i32, i32, i32, i32, i32, i32*)** %114, align 8
  %116 = load i32, i32* %12, align 4
  %117 = load i32, i32* %17, align 4
  %118 = load i32, i32* %18, align 4
  %119 = load i32, i32* %19, align 4
  %120 = load i32, i32* %23, align 4
  %121 = load i32, i32* %18, align 4
  %122 = sub nsw i32 %120, %121
  %123 = load i32, i32* %13, align 4
  %124 = load i32, i32* %14, align 4
  %125 = load i32*, i32** %22, align 8
  %126 = call i32 %115(i32 %116, i32 0, i32 %117, i32 %118, i32 %119, i32 %122, i32 %123, i32 %124, i32* %125)
  br label %127

127:                                              ; preds = %112, %108
  %128 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %129 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %128, i32 0, i32 0
  %130 = load i32, i32* %129, align 8
  %131 = load i32, i32* @MPGL_CAP_ROW_LENGTH, align 4
  %132 = and i32 %130, %131
  %133 = icmp ne i32 %132, 0
  br i1 %133, label %134, label %140

134:                                              ; preds = %127
  %135 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %136 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %135, i32 0, i32 1
  %137 = load i32 (i32, i32)*, i32 (i32, i32)** %136, align 8
  %138 = load i32, i32* @GL_UNPACK_ROW_LENGTH, align 4
  %139 = call i32 %137(i32 %138, i32 0)
  br label %140

140:                                              ; preds = %134, %127
  %141 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %142 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %141, i32 0, i32 1
  %143 = load i32 (i32, i32)*, i32 (i32, i32)** %142, align 8
  %144 = load i32, i32* @GL_UNPACK_ALIGNMENT, align 4
  %145 = call i32 %143(i32 %144, i32 4)
  br label %146

146:                                              ; preds = %140, %41
  ret void
}

declare dso_local i32 @gl_bytes_per_pixel(i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @get_alignment(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
